--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-size: 16px;
   /* Color Palette */
   --green1: #01631ab7;
-  --green2: #8feca7b7;
+  --green2: #d4faddb7;
   --white: #ffffff;
 }
 
@@ -121,12 +121,12 @@ body::-webkit-scrollbar-thumb{
   left: 1rem;
   width: 50%;
   padding: 2rem;
-  box-shadow: 0px 0px 20px rgba(1, 99, 26, 0.718); 
+  box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.5); 
   z-index: -1;
 }
 
 .background-box2{
-  background-color:var(--green2);
+  background-color:var(--white);
   position: relative;
   top: 10%;
   bottom: 10%;
@@ -135,7 +135,7 @@ body::-webkit-scrollbar-thumb{
   width: 100%;
   height: 70%;
   padding: 2rem;
-  box-shadow: 0px 0px 20px rgba(1, 99, 26, 0.718); 
+  box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.2);
   z-index: -1;
 }
 
