--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Tektur:wght@500&display=swap');
 
 :root{
   font-family: 'Roboto Slab', serif;
@@ -137,5 +138,39 @@ body::-webkit-scrollbar-thumb{
   padding: 2rem;
   box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.2);
   z-index: -1;
+}
+
+.headshot{
+  border-radius: 50%;
+  overflow: hidden;
+  height: 50%;
+  margin-left: 15%;
+}
+
+.background-box2 > h6{
+  margin-left: 17%;
+  margin-top: 1%;
+  margin-bottom: 0%;
+  padding: 0;
+  font-size:medium;
+}
+
+.background-box2 > h2{
+  margin-left: 2%;
+  margin-top: 1%;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.linkedin-icon{
+  margin-left: 20%;
+  padding-top: 5%;
+  height: 10%;
+}
+
+.github-icon{
+  padding-left: 2%;
+  padding-top: 5%;
+  height: 10%;
 }
 
