--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   font-size: 16px;
   /* Color Palette */
   --green1: #01631ab7;
-  --green2: #d4faddb7;
+  --green2: #c4c0c0d4;
   --white: #ffffff;
 }
 
@@ -114,64 +114,83 @@ body::-webkit-scrollbar-thumb{
   max-width: 100%;
 }
 
-.background-box1{
-  background-color:var(--green1);
+.container{
+  display: grid;
   position: absolute;
   top: 5rem;
-  bottom: 8rem;
+  bottom: 6rem;
   left: 1rem;
-  width: 50%;
+  width: 90%;
   padding: 2rem;
+  grid-template-columns: 5fr 2fr 2fr 4fr;
+  grid-template-rows: 20px 4fr auto 2fr 2fr 20px;
+  justify-content: center;
+  align-content: center;
+  row-gap: 10px;
+  column-gap: 10px;
+}
+
+.background-box1{
+  background-color:var(--green1);  
   box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.5); 
-  z-index: -1;
+  z-index: -3;
+  grid-area: 1/1/7/4;
 }
 
 .background-box2{
   background-color:var(--white);
-  position: relative;
-  top: 10%;
-  bottom: 10%;
-  left: 50%;
-  overflow-x: visible;
-  width: 100%;
-  height: 70%;
-  padding: 2rem;
-  box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.1);
+  z-index: -2;
+  grid-area: 2/2/6/5;
+}
+
+.strip{
   z-index: -1;
+  grid-area: 5/2/6/4;
+}
+
+.headshot-img{
+  border-radius: 50%;
+  overflow: hidden;
+  width: 120px;
+  padding-top: 0.5rem;
+}
+
+.icons{
+  height: 25px;
+  width: 25px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .headshot{
-  border-radius: 50%;
-  overflow: hidden;
-  height: 50%;
-  margin-left: 15%;
+  grid-area: 2/2/3/4;
+  justify-self: center;
+  align-self:center;
 }
 
-.background-box2 > h6{
-  margin-left: 17%;
-  margin-top: 1%;
-  margin-bottom: 0%;
-  padding: 0;
-  font-size:medium;
+.name{
+  grid-area: 3/2/4/4;
+  justify-self: center;
 }
 
-.background-box2 > h2{
-  margin-left: 2%;
-  margin-top: 1%;
-  padding: 0;
+.it{
   text-transform: uppercase;
+  grid-area: 4/2/5/4;
+  justify-self: center;
+  align-self: center;
 }
 
 .linkedin-icon{
-  margin-left: 20%;
-  padding-top: 5%;
-  height: 10%;
+  grid-area: 5/2/6/3;
+  justify-self:end;
+  align-self: center;
 }
 
 .github-icon{
-  padding-left: 2%;
-  padding-top: 5%;
-  height: 10%;
+  grid-area: 5/3/6/4;
+  justify-self: start;
+  align-self: center;
 }
 
 #hamburger-icon {
